--- a/Read It/app/src/main/AndroidManifest.xml
+++ b/Read It/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.github.oskuda.readit">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReadIt">
-        <activity android:name=".Dashboard"></activity>
+        <activity android:name=".SearchActivity"
+            android:label="Search"
+            android:parentActivityName=".Dashboard"
+            android:theme="@style/NoActionBar">
+        </activity>
+        <activity android:name=".Dashboard" />
         <activity
             android:name=".MainActivity"
             android:theme="@style/NoActionBar">
