--- a/Read It/app/src/main/AndroidManifest.xml
+++ b/Read It/app/src/main/AndroidManifest.xml
@@ -6,15 +6,24 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/applogo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReadIt">
-        <activity android:name=".SearchActivity"
+        <activity
+            android:name=".NewsArticleDetail"
+            android:label="News"
+            android:parentActivityName=".Dashboard"
+            android:theme="@style/NoActionBar">
+
+        </activity>
+        <activity
+            android:name=".SearchActivity"
             android:label="Search"
             android:parentActivityName=".Dashboard"
             android:theme="@style/NoActionBar">
+
         </activity>
         <activity android:name=".Dashboard" />
         <activity
